<resources>
    <string name="app_name">Yu-Gi-Oh! Life Point Calculator</string>
    <string name="lifepoints">Starting Life Points</string>
    <string name="play">Play</string>
    <string name="rock_paper_scissors">Rock Paper Scissors</string>
    <string name="player_2">Player 2...</string>
    <string name="player_1">Player 1...</string>
    <string name="_10">+10</string>
    <string name="_100">+100</string>
    <string name="_500">+500</string>
    <string name="_1000">+1000</string>
    <string name="_m10">-10</string>
    <string name="_m100">-100</string>
    <string name="_m500">-500</string>
    <string name="_m1000">-1000</string>
    <string name="_0">0</string>
    <string name="placeholder">to ...</string>
    <string name="roll">Roll</string>
    <string name="flip">Flip</string>
    <string name="kill">KILL</string>
</resources>
